force-app/main/default/objects/OpportunityLineItem/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <formula>CASE(
    TEXT(Revenue_Type__c),
    &quot;Monthly Recurring&quot;, TotalPrice * 12,
    &quot;Annual Recurring&quot;, TotalPrice,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>