force-app/main/default/objects/OpportunityLineItem/fields/Line_TCV__c.field-meta.xml
<CustomField>
    <fullName>Line_TCV__c</fullName>
    <formula>One_Time_Revenue__c + Recurring_TCV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>