force-app/main/default/objects/OpportunityLineItem/fields/One_Time_Revenue__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Revenue__c</fullName>
    <formula>IF(
    ISPICKVAL(Revenue_Type__c, &quot;One-Time&quot;),
    TotalPrice,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One-Time Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>