force-app/main/default/objects/OpportunityLineItem/fields/Recurring_TCV__c.field-meta.xml
<CustomField>
    <fullName>Recurring_TCV__c</fullName>
    <formula>CASE(
    TEXT(Revenue_Type__c),
    &quot;Monthly Recurring&quot;,
        TotalPrice * BLANKVALUE(Term_Months__c, 0),

    &quot;Annual Recurring&quot;,
        TotalPrice * (BLANKVALUE(Term_Months__c, 0) / 12),

    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>