force-app/main/default/objects/OpportunityLineItem/fields/Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Months__c</fullName>
    <label>Term Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>