force-app/main/default/objects/OpportunityLineItem/validationRules/VE_Recurring_Product_Requires_Term.validationRule-meta.xml
<ValidationRule>
    <fullName>VE_Recurring_Product_Requires_Term</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Revenue_Type__c, &quot;Monthly Recurring&quot;),
        ISPICKVAL(Revenue_Type__c, &quot;Annual Recurring&quot;)
    ),
    OR(
        ISBLANK(Term_Months__c),
        Term_Months__c &lt;= 0
    )
)</errorConditionFormula>
    <errorMessage>A recurring product must have a contract term greater than 0 months.</errorMessage>
</ValidationRule>